# fast-file-mq

./: CMakeLists.txt  DataStorage.cpp  FileMQ.cpp  FileMQ.h  MetadataStorage.cpp  MetadataStorage.h  QueueLock.h  README  README.md  file-mq.cpp  file-mq.h
bindings/python/: binding.cpp  setup.py  test.py
src/: DataStorage.cpp  DataStorage.h  FileMQ.cpp  FileMQ.h  MetadataStorage.cpp  MetadataStorage.h  QueueLock.cpp  QueueLock.h  file-mq.cpp  helper.cpp  helper.h
test/: FileMQ-test.cpp  data.bytes  metadata.bytes  test.cpp  test.out
